# danielmcourtney

./: .dockerignore  .env.example  .eslintignore  .gitignore  .prettierignore  Cargo.toml  Dockerfile  LICENSE  README.md  init.sql  nginx.conf  package-lock.json  package.json  run.sh  svelte.config.js  tsconfig.json  vite.config.ts
data/: about.json  config.json  educations.json  experience.json  jobs.json  projects.json
data/projects/: film-critic.md  python-trader.md  sorting-visualizer.md  tonys-tacos.md
etc/: nginx.dev.conf
prisma/: schema.prisma
prisma/seeds/: Educations.sql  Jobs.sql  Projects.sql
public/: styles.css
scripts/: build.sh  copy-to-vol.sh  run.sh
src/: app.d.ts  app.html  db.rs  handlers.rs  hooks.server.ts  lib.rs  main.rs  tmpl.rs
src/lib/: config.ts  github.ts  markdown.ts  types.ts
src/lib/components/: Drawer.svelte  EducationCard.svelte  JobCard.svelte  ProjectCard.svelte
src/lib/server/: auth.ts  db.ts  jsondb.ts  util.ts
src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
src/routes/(app)/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/admin/: +layout.server.ts  +layout.svelte
src/routes/contact/: +page.svelte
src/routes/experience/: +page.server.ts  +page.svelte
src/routes/login/: +page.server.ts  +page.svelte
src/styles/: _breakpoints.scss  _global.scss  _mixins.scss  _reset.scss  _theme.scss  _typography.scss  _variables.scss  index.scss
templates/: contact.tmpl  error.tmpl  experience.tmpl  home.tmpl  layout_base.tmpl
(+24 files in other folders)
